Quorum/Library/Tests/Expressions/Pass/OutputText.quorum
class Main 
    action Main
        output "Hello, World!"
    end
end