Quorum/Library/Tests/Expressions/Fail/BadAndTest.quorum
class Main
    action Main
        output "Hello world!"
    and end
end